web/themes/custom/glazed_subtheme/css/style.css
/* ... */
/*----- 23-aug-2022------*/

/*24-Aug-2022 work by rahul*/
section#block-views-block-landing-carousels-block-1 {
    overflow: hidden;
}

.row.view.view-rocket-landing-page-lists.view-id-rocket_landing_page_lists {
    padding: 2rem 0 5rem;
}

.view-id-rocket_landing_page_lists.view-display-id-block_1.custom-defence-node {
    margin-top: 0px;
}

.product-no-tabs #block-rockettabs {
    display: none;
}

.block-views-blocklanding-carousels-block-1 .form-group {
    margin-bottom: 0 !important;
}

#rocket .view-display-id-categories .landing-list-item .landing-list-button,
#rocket .view-display-id-categories_innovation .landing-list-item .landing-list-button,
#rocket .view-id-rocket_landing_page_lists.view-display-id-block_1 .landing-list-item .landing-list-button {
    width: 40px !important;
    flex: 0 0 40px !important;
}

@media only screen and (max-width: 1024px) {
    #rocket.page-node-type-landing-page .wrap-containers .region.region-content .page-title {
        margin: 15px auto 0;
        padding: 0.6rem 1rem 1rem;
        height: auto;
        font-size: 1.4rem;
        letter-spacing: 0.2rem;
    }

    .row.view.view-rocket-landing-page-lists.view-id-rocket_landing_page_lists .views-view-grid .views-col {
        padding-left: 0px;
        width: 100% !important;
        padding-right: 0px;
        margin: 1rem 0px 0px;
    }

    .row.view.view-rocket-landing-page-lists.view-id-rocket_landing_page_lists .landing-list-item {
        margin: 1rem 0px;
    }

    .row.view.view-rocket-landing-page-lists.view-id-rocket_landing_page_lists.custom-defence-node .landing-list-item {
        margin: 15px 0 0 0px;
    }

    #rocket.page-node-type-landing-page .landing-content-main-content {
        padding-bottom: 12px;
    }

    .row.view.view-rocket-landing-page-lists.view-id-rocket_landing_page_lists .views-view-grid .views-col:first-child {
        margin-top: 0px;
    }

    .row.view.view-rocket-landing-page-lists.view-id-rocket_landing_page_lists .views-view-grid .views-col:last-child {
        margin-bottom: 0px;
    }

    #rocket.page-node-type-landing-page .wrap-containers .region.region-content .page-title span {
        line-height: 28px;
    }

    .human-exploration-category-view .views-col {
        padding-left: 0px;
        padding-right: 0px;
    }


    .view-id-rocket_landing_page_lists.view-display-id-block_1.custom-defence-node {
        margin-top: 0px;
    }

    #rocket .custom-home-page.view-landing-carousels:before {
        z-index: 4;
    }
}

.row.custom-defence-node {
    margin-left: -4px;
    margin-right: -4px;
}

@media only screen and (max-width: 991px) {
    .custom-defence-node .col-sm-4 {
        width: 50%;
        padding-left: 15px;
        padding-right: 15px;
        margin-bottom: 30px !important;
    }
}

@media only screen and (max-width: 767px) {
    .custom-defence-node .col-sm-4 {
        width: 100%;
    }
}

.owl-carousel .owl-nav {
    display: inline !important;
}

.tabs--primary.nav.nav-tabs li::before {
    display: none;
}

.tabs--primary.nav.nav-tabs li {
    padding: 0 !important;
}

/*24-Aug-2022 work by rahul*/

/*Task-208 Start*/
.glazed-editor .az-element--controls-spacer {
	margin-top: 0 !important;
}


.col-padding-limit .views-row{
	padding: 0 4px !important;
}
/*Task-208 end*/

